// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Commands workspace <workspace-name> <sub-command> runs a given command in the specified workspace 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "Test Component A
",
}
`;

exports[`Commands workspace <workspace-name> <sub-command> should preserve INIT_CWD to the original value 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "docs",
}
`;

exports[`Commands workspace <workspace-name> <sub-command> when the given workspace doesnt exist lists all possible workspaces 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "Test Component A
",
}
`;
